# Northstar2.0

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  README.md  STRATEGY.md  WORKFLOW.md  check_yf.mjs  fetch_error.cjs  metadata.json  package-lock.json  package.json  pyproject.toml  render.yaml  run_api_test.ts  scratch-nvda.json  scratch-yf-quote.ts  scratch-yf.ts  scratch-yf2.ts  server.ts  stash_db.sqlite  test-yf-fallback.ts  test-yf.ts  test_etf_pe.py  tsconfig.json  update_db.py  vercel.json  vite.config.ts
.hermes/plans/: 2026-06-04_145124-northstar-operating-machine.md  2026-06-06_232315-command-center-morning-brief-v2.md
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
api/: endpoints.md  index.ts
config/persona-model/: v1.json
config/portfolio-health/: v1.json
config/risk-model/: v1.json
config/score-models/: v1.json
data/: ibkr-portfolio.json  macro-calendar.json  northstar.db  northstar.db-shm  northstar.db-wal
docs/adr/: 0000-initial-project-setup.md  0002-research-decision-loop.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/operations/: research-alerts.md  (+2 more)
prompts/: generate-workflow-guide.md
scratch/: test-yf.ts
scripts/: collect_evidence.py  overnight_loop.py  overnight_loop_v3.py  refresh_universes.py  requirements.txt  run-pipeline.py  run-scanner.py  seed-dow30.py  seed-qqq.py  seed-sp500.py  seed-themes.py  test_yf.py
src/: App.tsx  constants.ts  index.css
(+229 files in other folders)
