[project]
name = "northstar2"
version = "0.1.0"
description = "Finance dashboard with research and evidence-driven stock analysis"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.0",
    "finnhub-python>=2.4.0",
    "streamlit>=1.28",
    "plotly>=5.17",
    "pytest>=7.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]